--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 		</ul>
 	</div>
 		<h2>Shagun Yadav</h2>
-		<h3>Content Writer/Developer</h3>
+		<h3>Developer/Content Writer</h3>
 		<p>Currently pursuing B.Tech (Computer Science) from IGDTUW.</p>
 	</div>
 	</div>
