--- a/blog.html
+++ b/blog.html
@@ -176,7 +176,7 @@ A hobby can be meaningful as well as something leisurely. Many people have paint
     </main>
 
 
-<footer>
+<footers>
         <div id="left-footer">
             <h3>Quick Links</h3>
             <p>
@@ -225,7 +225,7 @@ A hobby can be meaningful as well as something leisurely. Many people have paint
                 </ul>
             </div>
         </div>
-    </footer>
+    </footers>
 
 </body>
 </html>
