--- a/donate.html
+++ b/donate.html
@@ -106,7 +106,7 @@
       
     </div>
 
-    <footer>
+    <footers>
         <div id="left-footer">
             <h3>Quick Links</h3>
             <p>
@@ -155,7 +155,7 @@
                 </ul>
             </div>
         </div>
-    </footer>
+    </footers>
 
   </main>
 
