--- a/dronedelivery.html
+++ b/dronedelivery.html
@@ -96,7 +96,7 @@
         </div>
     </div>
 
-    <footer>
+    <footers>
         <div id="left-footer">
             <h3>Quick Links</h3>
             <p>
@@ -145,7 +145,7 @@
                 </ul>
             </div>
         </div>
-    </footer>
+    </footers>
 
   </main>
 
