--- a/feeling.html
+++ b/feeling.html
@@ -58,10 +58,10 @@
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone Grocery Delivery</a>
-          <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
-          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
-          <a class="dropdown-item" href="feeling.html">Gift a Feeling To The People At Risk</a>
+          <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone <br/>Grocery Delivery</a>
+          <a class="dropdown-item" href="hero.html">Salute to the Heros <br/>of the Day</a>
+          <a class="dropdown-item" href="blog.html">Sharing Experiences <br/>With The World</a>
+          <a class="dropdown-item" href="feeling.html">Gift a Feeling To <br/>The People At Risk</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="index.html#contact">Contact Us</a>
@@ -95,7 +95,7 @@
  
     </div>
 
-    <footer>
+    <footers>
         <div id="left-footer">
             <h3>Quick Links</h3>
             <p>
@@ -144,7 +144,7 @@
                 </ul>
             </div>
         </div>
-    </footer>
+    </footers>
 
   </main>
 
