--- a/health.html
+++ b/health.html
@@ -102,7 +102,7 @@
       
     
 
-    <footer>
+    <footers>
         <div id="left-footer">
             <h3>Quick Links</h3>
             <p>
@@ -151,7 +151,7 @@
                 </ul>
             </div>
         </div>
-    </footer>
+    </footers>
 
   </main>
 
