--- a/hero.html
+++ b/hero.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  
+  <title>Heroes of the day</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="page.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <title>Heroes of the day</title>
 </head>
 
 <body>  
@@ -58,10 +56,10 @@
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="dronedelivery">Door to Door Drone Grocery Delivery</a>
-          <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
-          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
-          <a class="dropdown-item" href="feeling.html">Gift a Feeling To The People At Risk</a>
+          <a class="dropdown-item" href="dronedelivery">Door to Door Drone <br/>Grocery Delivery</a>
+          <a class="dropdown-item" href="hero.html">Salute to the Heros <br/>of the Day</a>
+          <a class="dropdown-item" href="blog.html">Sharing Experiences <br/>With The World</a>
+          <a class="dropdown-item" href="feeling.html">Gift a Feeling To <br/>The People At Risk</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="index.html#contact">Contact Us</a>
@@ -99,7 +97,7 @@
       </aside>
     </div>
 
-    <footer>
+    <footers>
         <div id="left-footer">
             <h3>Quick Links</h3>
             <p>
@@ -148,7 +146,7 @@
                 </ul>
             </div>
         </div>
-    </footer>
+    </footers>
 
   </main>
 
