--- a/hero4.html
+++ b/hero4.html
@@ -99,7 +99,7 @@
       </aside>
     </div>
 
-    <footers>
+    <footer>
         <div id="left-footer">
             <h3>Quick Links</h3>
             <p>
@@ -148,7 +148,7 @@
                 </ul>
             </div>
         </div>
-    </footers>
+    </footer>
 
   </main>
 
