--- a/dronedelivery.html
+++ b/dronedelivery.html
@@ -87,7 +87,7 @@
             <h3 class="page-heading" align="center">Door-to-Door Delivery Service via Drones</h3>
             <p>The latest steps taken by the government include the complete isloation of several localities/societies/colonies in various cities all around the country. These areas are sealed due to a significant number of positive tested cases reported. The people residing in these hotspots,as they are named, have been cutoff completely making it difficult for them to even arrange necessary items. The drone service turns out to be the most safe and reliable means of providing them with these items at their door-step.</p>
             <p>If you or anyone you know are stuck in a situation like this, we would like to extend our support and help by delivering these products to you. Please fill the form below to avail our drone delivery service.</p>
-            <p><a href="https://form.jotform.com/201081525225040" onclick="myFunction()" id="my" class="btn-readmore">Click Here to avail the service</a> 
+            <p><a href="form4.html" onclick="myFunction()" id="my" class="btn-readmore">Click Here to avail the service</a> 
               </p>
           </div>
         </div>
