--- a/hero4.html
+++ b/hero4.html
@@ -80,22 +80,31 @@
       <section id="blogpost">
         <div class="cards">
           <div class="cards-image size">
-            <img src="img/1.jpg" alt="Card Image">
+            <img src="img/hero4.PNG" alt="Card Image">
           </div>
           <div class="cards-description description">
-            <h3 align="center">The Introduction</h3>
-            The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens. Lockdowns are seen as the only possible and reliable means of protection and the reduction of further outbreak of the virus. These lockdowns, imposed in various countries and cities of the world have led to the unemployment and unforeseen disturbances in the lives of people. While the economically and financially stable part of the population is somehow coping with the sudden halt in their own ways, the livelihood of the poor, unemployed and the needy is jeopardized. The main concern of the governments all around the globe is to somehow provide for these people by introducing various fundraising schemes, providing basic facilities like shelter and food, proper medical testing and treatment for the Covid positive patients.Our aim behind building this website was to provide an online platform where the citizens can contribute their part in this fight against this global crisis. We believe that by collective support, motivation and contribution we can collect funds for the betterment of our society in these highly testing times. Our page aims at bringing together people so that they can interact, form ideas and share their stories with each other.
-          </div>
+            <h3 align="center">Captain Tom Moore </h3>
+            LONDON - A 99-year-old British World War II hero who set out to raise around $1,000 for health care workers battling COVID-19 has raised $16 million, and counting.
+
+Captain Tom Moore of Bedford, 75 kilometers north of London, hoped to raise money by walking 100 times around his garden before his 100th birthday. By the time he completed the challenge Thursday, he had raised about $16 million, as the donations continued to pour in from around the world. More than 750,000 people have donated to his cause.
+
+"It's unbelievable that people have been so kind to give that sort of money to the National Health Service," Moore told reporters Thursday. "Maybe I was responsible for starting it, but not deliberately. It was purely gratitude for what they've done for me."
+            Moore will turn 100 on April 30. He wanted to raise funds for Britain's National Health Service (NHS) to thank what he called the "magnificent" staff who cared for him through cancer treatments and a broken hip.
+
+Ellie Orton, chief executive of NHS Charities Together, to which the money will be donated, said the funds would be deployed immediately.
+
+"It's going straight to the front line of the NHS. The staff, the volunteers, the patients, and supporting them."
+            </div>
         </div>
 
       </section>
 
       <aside id="sidebar">
        <h3>Hero Of The Day</h3>
-        <a href="hero.html" style="color.white"><h4>HERO OF DAY NO.1<h4></a>
-          <a href="hero2.html"><h4 style="color.white">HERO OF DAY NO.2<h4></a>
-        <a href="hero3.html"><h4 style="color.white">HERO OF DAY NO.3<h4></a>  
-         <a href="hero4.html"><h4 style="color.white">HERO OF DAY NO.4<h4></a> 
+       <a href="hero.html" style="color.white"><h6>Hospital janitor finds joy in protecting staff<h6></a>
+          <a href="hero2.html"><h6 style="color.white">She’s not hanging up her apron just yet<h6></a>
+        <a href="hero3.html"><h6 style="color.white">From handling Trauma Victims to COVID-19 patients, This man has carried them all<h6></a>  
+         <a href="hero4.html"><h6 style="color.white">99-Year-Old War Hero Raises Millions for Coronavirus Health Workers<h6></a> 
       </aside>
     </div>
 
