--- a/hero3.html
+++ b/hero3.html
@@ -98,7 +98,7 @@
         <a href="hero.html" style="color.white"><h6>Hospital janitor finds joy in protecting staff<h6></a>
         <a href="hero2.html"><h6 style="color.white">She’s not hanging up her apron just yet<h6></a>
         <a href="hero3.html"><h6 style="color.white">From handling Trauma Victims to COVID-19 patients, This man has carried them all<h6></a>  
-        <a href="hero4.html"><h6 style="color.white">HERO OF DAY NO.4<h6></a> 
+        <a href="hero4.html"><h6 style="color.white">99-Year-Old War Hero Raises Millions for Coronavirus Health Workers<h6></a> 
       </aside>
     </div>
 
