--- a/blog.html
+++ b/blog.html
@@ -57,10 +57,10 @@
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone Grocery Delivery</a>
-          <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
-          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
-          <a class="dropdown-item" href="feeling.html">Gift a Feeling To The People At Risk</a>
+          <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone Grocery Delivery<br></a>
+          <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day<br></a>
+          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World<br></a>
+          <a class="dropdown-item" href="feeling.html">Gift a Feeling To The People At Risk<br></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="index.html#contact">Contact Us</a>
