--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
        <div class="card">
          <div class="imgBx">
 		 <a href="blog.html">
-			 <img src="img/relax.png" alt="images">
+			 <img src="img/relax.jpg" alt="images">
 		 </a>	
             
          </div>
@@ -264,7 +264,7 @@
        <div class="card">
          <div class="imgBx">
 		 <a href="health.html">
-			  <img src="img/health.png" alt="images">
+			  <img src="img/health.jpg" alt="images">
 		 </a>	 
            
          </div>
