--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="cards">
                 <div class="cards-image">
                     <a href="feeling.html">
-                        <img src="img/gift.jpg" alt="Card Image">
+                        <img src="img/gift1.jpg" alt="Card Image">
                     </a>
                 </div>
 
