--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 	<div class="row">
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
-	<img src="img/sponge.png" class="img-responsive">
+	<img src="img/mansi.jpg" class="img-responsive">
 		<ul>
 			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
 			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
