--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
-	<img src="img/sy.jpg" class="img-responsive">
+	<img src="img/sy.JPG" class="img-responsive">
 		<ul>
 			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
 			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
