--- a/volunteer.html
+++ b/volunteer.html
@@ -154,7 +154,7 @@
           Some of the initiatives to be taken up by the volunteers are Procurement and distribution of hygiene & personal safety materials like masks, soaps, sanitizers etc., House to house visit to explain about the precautions to be taken for COVID-19, Distribution of food items to poor and needy, Dry ration, vegetables and kitchen being run in many places, Helping to maintain social distancing at the shops where people come for essential items.</p>
           <p><a href="https://www.mygov.in/task/join-war-against-covid-19-register-volunteer/ " onclick="myFunction()" id="my" class="btn-readmore">To Volunteer under government schemes</a></p>
           <p><a href="https://indianredcross.org/ircs/getinvolved#volunteers" onclick="myFunction()" id="my" class="btn-readmore">To Volunteer for Indian Red Cross Society</a></p>        
-           <p><a href="https://self4society.mygov.in/" onclick="myFunction()" id="my" class="btn-readmore">To Volunteer for Self4society camapaign by government</a></p>
+           <p><a href="https://self4society.mygov.in/" onclick="myFunction()" id="my" class="btn-readmore">To Volunteer for Self4society campaign by government</a></p>
           
           </div>
         
