--- a/blog.html
+++ b/blog.html
@@ -133,7 +133,7 @@ Watch a funny movie. Laugh. Laugh. Laugh!  It really IS the best medicine. You c
 
                 <div class="cards-description font">
                     <a href="#">
-                        <h3>WRITERS PERSUING THOUGHTS</h3>
+                        <h3>WRITERS PURSUING THOUGHTS</h3>
                     </a>
                     <p>
                        Now is the time to be more nurturing to yourself.  Isolation or quarantine is a great time to prioritize your mental and physical well-being, but if you also want to use it to be productive, you have plenty of historical role models to choose from.
