--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
 
 <main>
     <section class="container">
-    <h2 class="section-heading">Shinning Blogs of the Day</h2>
+    <h2 class="section-heading">Shining Blogs of the Day</h2>
 	<div class="row">
 	<div class="col-md-6">
         <section>
