--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             
          </div>
          <div class="details">
-            <h2>Phsycological Relaxation<br>
+            <h2>Psychological Relaxation<br>
           </div>
        </div>
 
